Chapters 1 and 2 feedback

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -46,7 +46,7 @@ coverage2022 <- 76
 
 <!-- What is HIV -->
 HIV is a retrovirus which infects humans.
-If untreated, HIV develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
+If untreated, HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
 HIV primarily attacks a type of white blood cell vital for the function of the immune system.
 As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or *Pneumocystis* pneumonias.
 
@@ -65,7 +65,7 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-Pivotal roles in shaping the response have been played by local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
+The response has been shaped by local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
 The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR, constituting the "largest commitment by a single nation to address a single disease in history" [@pepfar2022], is indicative of the scale of the response.
 
 ```{r}
@@ -82,33 +82,33 @@ knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 ```
 
 <!-- The effort has translated into progress -->
-Implementation of HIV prevention and treatment has seen both the number of new HIV infections and AIDS-related deaths per year fall significantly since their peak (Figure \@ref(fig:overall-picture)).
+Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their peak (Figure \@ref(fig:overall-picture)).
 The most significant evidence-based interventions are:
 
-* Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
+* Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorroeae*, syphilis, and *Trichomonas vaginalis*.
+Condom usage has increased significantly since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
+That said, there remain significant and difficult to close gaps in condom usage.
+* Antiretroviral therapy (ART) is a combination of drugs which stop the virus from replicating in the body.
 A person living with HIV who takes ART daily can live a full and healthy life, transforming what was once a terminal illness to a treatable chronic condition.
 Of the `r custom_numbers_to_words(plhiv2022)` people living with HIV (PLHIV) in 2022, around `r coverage2022`% were accessing ART.
 A staggering `r custom_numbers_to_words(art_deaths_averted)` AIDS-related deaths are estimated to have been averted by ART [@unaids2023global].
 ART reduces the amount of virus in the blood and genital secretions.
-If the virus is undetectable then there is considerable evidence that it cannot be transmitted sexually [@cohen2011prevention].
-For this reason, as well as providing life saving treatment, ART also operates as prevention (TaSP).
-Particular efforts have been made to provide pregnant women with ART, which is estimated to reduce the chance of mother-to-child transmission (MTCT) by 25-35% in some settings [@siegfried2011antiretrovirals].
-* Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorroeae*, syphilis, and *Trichomonas vaginalis*.
-There has been a significant scale-up of condom usage since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
-That said, there remain significant and difficult to close gaps in the proportion of individuals reporting they used a condom during their last high-risk sexual encounter.
-* Voluntary medical male circumcision (VMMC) has been found to provide partial protection against female-to-male HIV transmission.
-Three landmark randomised control trials [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result in a 50-60% reduction of HIV incidence in men.
+If the virus is undetectable then there is considerable evidence that it cannot be transmitted sexually [@cohen2011prevention; @broyles2023risk].
+For this reason, in addition to providing life saving treatment, ART also operates as prevention.
+Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) [@siegfried2011antiretrovirals].
+* Voluntary medical male circumcision (VMMC) partially protects against female-to-male HIV acquisition.
+Three landmark randomised control trials [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result a reduction of HIV acquisition in men by 50-60%.
 Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings.
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
-* Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are drugs which can be taken before and after exposure to prevent transmission.
+* Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretrovial drugs which can be taken before and after exposure to prevent transmission.
 PrEP and PEP are more costly than some other prevention options, so primarily useful in high risk settings.
 
 Though important progress had been made, there remains much more to do.
-In 2022 there were `r custom_numbers_to_words(infections2022)` people newly infected with HIV and `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
+In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
 Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
 Renewed commitment is required to meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a shortfall in HIV funding [@economist2023triple]. 
 
-(ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria are yet to be approved and have been redacted. The estimates process in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).
+(ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria were not published. Data collection in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).
 
 ```{r naomi-continent, fig.cap="(ref:naomi-continent)"}
 knitr::include_graphics("figures/hiv-aids/naomi-continent.png")
@@ -121,8 +121,9 @@ Some interventions might be orders of magnitude more impactful than others [@ord
 
 <!-- Uneven burden in space -->
 Disease burden varies substantially across multiple spatial scales.
-In some countries, the epidemic is concentrated within small populations, and HIV prevalence is low.
-In others, transmission is sustained in the general population, and HIV prevalence is higher.
+In some countries, the epidemic is concentrated in small populations, and national HIV prevalence is low.
+In others, the epidemic is sustained by heterosexual transmission, and national HIV prevalence is higher (typically >1%)
+These two epidemic settings are described as concentrated and generalised respectively [@tanser2014concentrated].
 Most of the countries severely affected by HIV are in sub-Saharan Africa (SSA).
 It is estimated that `r round(ssa_plhiv2022 / plhiv2022 * 100)`% of the `r custom_numbers_to_words(plhiv2022)` PLHIV worldwide live in SSA.
 Adult HIV prevalence (ages 15-49) is higher than 10% (Figure \@ref(fig:naomi-continent)) in some countries in southern Africa.
@@ -133,7 +134,7 @@ For example, adult HIV prevalence at the district municipality level in South Af
 In all countries and contexts, some groups of people are at much higher risk than others.
 Groups of people at increased risk of HIV infection are known as key populations (KPs).
 Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP) [@stevens2022key].
-KPs are often marginalised, and face legal and social issues.
+KPs are often marginalised, and face legal and social barriers.
 In concentrated settings, the majority of new HIV infections occur in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
 For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing], but not typically considered a KP.
@@ -148,40 +149,45 @@ Surveillance can used to track epidemic indicators, identify at-risk populations
 Important indicators include:
 
 * **HIV prevalence** is the proportion $\rho \in [0, 1]$ of the population who have HIV, typically written as a percentage.
-Both new infections and more PLHIV remaining alive by taking treatment result in an increase in HIV prevalence.
+Both new infections and more PLHIV remaining alive by taking treatment increase HIV prevalence.
 As such, HIV prevalence should not be interpreted in isolation, and is primarily used indirectly to calculate other indicators.
 That said, in some circumstances when other indicators are difficult to estimate, HIV prevalence can be a useful proxy.
 The number of PLHIV is given by $N\rho$, where $N$ is the population size.
 * **HIV incidence** is the rate $\lambda \in \mathbb{R}$ of new HIV infections, typically written as number of new infections per 1000 person years.
 HIV incidence can be specified in terms of the change in HIV prevalence over some time period $\lambda = \Delta \rho / \Delta t$.
 Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence.
-The number of new HIV infections is given by $N \lambda$.
+The number of new HIV infections is given by $N (1 - \rho) \lambda$.
 * **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART, typically written as a percentage.
 Estimates of ART coverage play a direct role in the provision of treatment services.
-The number of people taking ART is given by $N \alpha$.
+The number of people taking ART is given by $N \rho \alpha$.
 
 <!-- * **Recently infected** -->
 <!-- * **Awareness of status** -->
 
 <!-- Key data sources used to inform these indicators are: household surveys, programmatic data -->
 
+### Data
+
+What are the current data?
+What are the current approaches to using the data?
+
 ### Challenges
 
-Obtaining estimates of these indicators which are reliable, timely, and at an appropriate spatial resolution is challenging.
-Among the most significant difficulties faced are:
+Obtaining reliable, timely estimates at an appropriate spatial resolution is challenging.
+The most significant difficulties faced are:
 
-1. **Data sparsity**
+1. **Data sparsity**:
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
 For example, in many countries the last conducted household survey is several years out of date.
 4. **Missing data**
 The sampling frame of a survey may not correspond to the target population.
-For example, many KPs are difficult to reach, and may be ommited from sampling frames.
+For example, many KPs are difficult to reach, and may be omitted from sampling frames.
 Individuals included on the sampling frame may choose not to respond.
 All surveys are subject to sampling error, as only a subset of the target population are sampled.
 Each of these issues can be characterised as being problems of missing data.
 I characterise missing data as referring to the shortfalls of any given study, and data sparsity as referring to limited availability of studies. 
-3. **Survey biases**
+3. **Response and measurement biases**
 Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias or a fear of discrimination or stigma.
 When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
 4. **Denominators and demography**
@@ -198,22 +204,24 @@ Further, they are typically applied coarsely, and without proper accounting for 
 
 ### Statistical approaches
 
-The challenges above make it direct interpretation of the data often misleading.
-Careful statistical modelling is required to overcome these limitations as best is possible.
+The challenges above make direct interpretation of the data often misleading or impossible.
+Careful statistical modelling is required to overcome these limitations as best as possible.
 
-1. **Borrowing information**
-When little direct data is available, data judged to be indirectly related can be used to help improve estimation.
-For example, if limited data is available for individuals of a certain age is a particular country, it is likely reasonable to make use of the data for individuals of a similar age in that country.
+1. **Borrowing information**:
+When little direct data are available, data judged to be indirectly related can be used to help improve estimation.
+For example, if limited data are available for individuals of a certain age is a particular country, it is likely reasonable to make use of data for individuals of a similar age in that country.
 As well as over age groups, information can be borrowed between and within countries, and across times. 
-2. **Evidence synthesis**
+2. **Evidence synthesis**:
 Multiple sources of evidence can be combined to overcome the limitations of any one data source.
-For example, infrequently run household surveys can be complimented by up to date programmatic data.
-3. **Expert guidance**
+For example, infrequently run household surveys can be complemented by up to date programmatic data.
+3. **Expert guidance**:
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
 Ensuring the quality of any data used in the estimation process is essential.
+4. **Uncertainty quantification**:
 
 ### Future directions
 
 Aims for HIV response going forward, and the surveillance capabilities needed to meet them:
 
-1. **Greater reliance on routine health system data** It is not recommended to include HIV testing in nationally representative household surveys in low (<2%) HIV prevalence settings [@world2005guidelines]. Patient-level HIV data systems [@world2017consolidated] and case-based surveillance (CBS). Integration of HIV services with other health programs and strengthening of health systems.
+1. **Greater reliance on routine health system data**:
+It is not recommended to include HIV testing in nationally representative household surveys in low (<2%) HIV prevalence settings [@world2005guidelines]. Patient-level HIV data systems [@world2017consolidated] and case-based surveillance (CBS). Integration of HIV services with other health programs and strengthening of health systems.
