--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -83,7 +83,7 @@ As such, although it is easy to evaluate $p(\boldsymbol{\mathbf{\phi}} \, | \, \
 A variety of computational methods have been developed to tackle this problem:
 
 1. **Sampling algorithms** These approaches look to generate samples from the posterior distribution [@robert2005monte].
-Sometimes sampling algorithsm and are known as Monte Carlo methods, named after the casino.
+Sometimes sampling algorithms and are known as Monte Carlo methods, named after the casino.
 The most popular is Markov chain Monte Carlo (MCMC), which proceeds by simulating from an ergodic Markov chain with the posterior distribution as its stationary distribution [@roberts2004general].
 The samples from this Markov chain may then be used to approximate the posterior distribution.
 In this thesis, I make use of a Hamiltonian Monte Carlo [HMC; @duane1987hybrid; @neal2011mcmc] algorithm, implemented in the Stan [@carpenter2017stan] probabilistic programming language (PPL).
