--- a/references.bib
+++ b/references.bib
@@ -1448,3 +1448,23 @@ doi = {10.1201/9781420072884-c30}
   year         = 2022,
   url          = {https://www.R-project.org}
 }
+
+@article{broyles2023risk,
+  title={The risk of sexual transmission of HIV in individuals with low-level HIV viraemia: a systematic review},
+  author={Broyles, Laura N and Luo, Robert and Boeras, Debi and Vojnov, Lara},
+  journal={The Lancet},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{tanser2014concentrated,
+  title={Concentrated HIV sub-epidemics in generalized epidemic settings},
+  author={Tanser, Frank and de Oliveira, Tulio and Maheu-Giroux, Mathieu and B{\"a}rnighausen, Till},
+  journal={Current Opinion in HIV and AIDS},
+  volume={9},
+  number={2},
+  pages={115},
+  year={2014},
+  publisher={NIH Public Access}
+}
+
