--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -64,46 +64,48 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 
 This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
-The approach to statistics is Bayesian because I arrive at conclusions based on data using probability models.
+The statistical approach is Bayesian because I arrived at conclusions based on data using probability models.
 
-(ref:gbd) HIV/AIDS is the largest cause of DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary between 0 (full health) and 1 (death) depending on severity of the condition.
+(ref:gbd) HIV/AIDS is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary between 0 (full health) and 1 (death) depending on severity of the condition.
 
 ```{r gbd, fig.cap="(ref:gbd)"}
 knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
-The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
-Over 30 years since the beginning of the epidemic, HIV is the largest cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
-Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination.
-However, there are substantial challenges in obtaining suitable estimates of relevant indicators needed to mount this response.
+The real world questions are related to strategic information for planning the human immunodeficiency virus (HIV) epidemic response in sub-Saharan Africa (SSA).
+Over 40 years since the beginning of the epidemic, HIV is the largest annual cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
+Quantification of the epidemic using statistics is an important part of the public health response.
+Effective implementation of both HIV prevention and treatment requires strategic information.
+However, producing suitable estimates of relevant indicators is challenging.
 
-The data I use are recorded from national household surveys or routinely collected from healthcare facilities.
-An important feature of this data is its location and the time at which it was recorded.
+The data I use are recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
+An important feature of these data are the location and the time at which each datum was recorded
 While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
 As a result, the work in this thesis makes use of, and aspires to contribute to the development of, modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
-Each project in this thesis, as well as the thesis itself, is accompanied by R [@r] code, hosted on [GitHub](https://github.com/athowes).
+Each project in this thesis, and the thesis itself, is accompanied by R [@r] code, hosted on GitHub at [`https://github.com/athowes`](https://github.com/athowes).
 
 ## Chapter overview
 
 This thesis is structured (Figure \@ref(fig:chapter-flowchart)) as follows:
 
-* Chapter \@ref(hiv-aids): I begin by providing an overview of the HIV/AIDS epidemic, and describing the challenges faced by disease surveillance efforts.
-* Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
+* Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic, and describing the challenges faced by disease surveillance efforts.
+* Chapter \@ref(bayes-st) introduces the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was intended to analyse a grid of pixels.
 In disease mapping, we work using the districts of a country, which are typically not a grid.
-I evaluate the practical consequences of this this concern [@howes2023beyond].
-* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection.
-The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
-I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
+I evaluated the practical consequences of this concern [@howes2023beyond].
+* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of acquiring HIV infection.
+The Global AIDS Strategy recommends prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
+I estimated the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assessed the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
+This work was included in the UNAIDS Global AIDS Update 2022 [@unaids2022global] and 2023 [@unaids2023global].
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
-With this model in mind, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
-I apply the method to data from Malawi, and analyse the consequences of inference method choice for policy relevant outcomes.
+With this model in mind, I developed an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
+I applied the method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-(ref:chapter-flowchart) Some chapters of the thesis should be read before others. Dashed lines represent recommended, but not required reading. Though chronological order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order as they correspond to research projects which are for the most part separable.
+(ref:chapter-flowchart) Some chapters of the thesis should be read before others. Dashed lines represent recommended, but not required reading. Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order as they correspond to research projects which are for the most part separable.
 
 ```{r chapter-flowchart, fig.cap="(ref:chapter-flowchart)"}
 knitr::include_graphics("figures/introduction/chapter-flowchart.png")
