--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -1,9 +1,9 @@
-Progress towards ending AIDS as a public health threat by 2030 is faltering.
+Progress towards ending AIDS as a public health threat by 2030 is not being made fast enough.
 Effective public health response requires accurate, timely, high-resolution estimates of epidemic and demographic indicators.
 Limitations of available data make obtaining these estimates difficult.
-I develop and apply Bayesian spatio-temporal methods to meet this challenge.
-First, I examine models for area-level spatial structure.
+I developed and applied Bayesian spatio-temporal methods to meet this challenge.
+First, I examined models for area-level spatial structure.
 <!-- , finding that... -->
-Second, I estimate district-level HIV risk group proportions, enabling behavioural prioritisation of prevention services, as put forward in the Global AIDS Strategy.
-Finally, I develop a novel deterministic Bayesian inference method, combining adaptive Gauss-Hermite quadrature with principal component analysis, motivated by the Naomi district-level model of HIV indicators.
+Second, I estimated district-level HIV risk group proportions, enabling behavioural prioritisation of prevention services, as put forward in the Global AIDS Strategy.
+Finally, I developed a novel deterministic Bayesian inference method, combining adaptive Gauss-Hermite quadrature with principal component analysis, motivated by the Naomi district-level model of HIV indicators.
 Together, the contributions in this thesis help to guide precision HIV policy in sub-Saharan Africa, as well as advancing Bayesian methods for spatio-temporal data.
